# doge

./: .clang-format  .gitignore  CMakeLists.txt
data/language/: chinese_pinyin.phone  chinese_words.pinyin  english_words.pinyin  tagging_words.pinyin  unicode.pinyin
include/language/: language.h  normalize.h  number.h
include/message/: audio_message.h  message.h  message_center.h  message_pool.h  message_queue.h
include/model/: data.h  preprocessor.h
include/model/melo/: preprocess.h
include/module/: module.h  whisper_module.h
include/utils/: io.h  string.h  time.h  type.h
src/: CMakeLists.txt
src/language/: CMakeLists.txt  language.cpp  normalize.cpp  number.cpp
src/model/: CMakeLists.txt
src/model/melo/: preprocess.cpp
src/utils/: CMakeLists.txt  string.cpp
test/: CMakeLists.txt
test/test_audio/: CMakeLists.txt  main.cpp
test/test_melo/: CMakeLists.txt  main.cpp
test/test_whisper/: CMakeLists.txt  main.cpp
